--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">news_app</string>
+    <string name="app_name">Location_news</string>
+    <string name="title_activity_maps_main">Map</string>
 </resources>
