--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name"></string>
     <string name="title_activity_maps_main">Map</string>
+
+    <string-array name="sort_by">
+        <item>Date </item>
+        <item>Relevancy</item>
+        <item>Popularity</item>
+    </string-array>
+    <string-array name="filters">
+        <item>Top Headlines</item>
+        <item>All</item>
+    </string-array>
 </resources>
