--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,6 @@
     </string-array>
     <string-array name="filters">
         <item>Top Headlines</item>
-        <item>All</item>
+        <item>Everything</item>
     </string-array>
 </resources>
